--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@
   padding: 0;
 }
 :root {
-  --primary: #F5EFFF;
-  --secondary: #E5D9F2;
+  --primary: #f5efff;
+  --secondary: #e5d9f2;
   --ternary: rgb(255, 30, 0);
   --white: white;
-  --bg-dark: #2a2a2a;
+  --bg-dark: #2a2a2af1;
   --dark-text-color: white;
   --shadow: 4px -2px 40px 9px rgba(128, 128, 128, 0.463);
   --hover: rgb(189, 24, 2);
@@ -18,6 +18,12 @@
   --border-color-off: var(--bg-dark);
 
   --content-logo-color: var(--white);
+  --about-bg-color: #cdc1ffd1;
+
+  --footer-bg-color: var(--hoveroff);
+}
+html{
+  scroll-behavior: smooth;
 }
 .container {
   width: 80%;
@@ -67,11 +73,13 @@ a {
   transition: all 0.3s;
 }
 #darkmode:checked + .wrapper {
-  --secondary:var(--bg-dark);
+  --secondary: var(--bg-dark);
   --primary: var(--bg-dark);
-  color: var(--dark-text-color);
+  --dark-text-color: var(--white);
+  --content-logo-color: var(--white);
   --border-color-off: var(--border-color-on);
 }
+
 /* Dark mode toggle */
 #darkmode:checked + .wrapper .left button {
   background-color: var(--ternary);
@@ -88,8 +96,8 @@ a {
 nav {
   background-color: var(--secondary);
   box-shadow: var(--shadow);
-  /* position: sticky;
-  top: 0; */
+  position: sticky;
+  top: 0;
 }
 .navbar {
   justify-content: space-between;
@@ -131,7 +139,7 @@ nav {
   align-items: center;
   gap: 2rem;
   max-height: 90vh; /* Increased height to accommodate image */
-  padding: 2rem 0;
+  padding: 4rem 0;
 }
 
 .right img {
@@ -139,7 +147,7 @@ nav {
   max-width: 400px;
   height: auto;
   max-height: 100%;
-  object-fit: cover; /* Ensures image covers the space without distortion */
+  object-fit: contain; /* Ensures image covers the space without distortion */
 }
 
 .left {
@@ -148,12 +156,12 @@ nav {
   margin-left: 5vw;
 }
 
-.right {
+.hero .right {
   justify-content: flex-end;
   height: 80vh;
 }
 
-strong {
+.hero .left strong {
   font-size: 1.3rem;
 }
 .left p + p {
@@ -225,34 +233,44 @@ strong {
 .skill {
   margin-top: 1rem;
 }
-.skill-container{
+.skill-container {
   padding: 1rem 0;
   justify-content: space-between;
   flex-wrap: wrap;
 }
-.skill-container div{
+.skill-container div {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.skill-container .fa-brands{
+.skill-container div:hover {
+  cursor: pointer;
+  transition: 0.3s;
+  transform: scale(1.3);
+}
+.skill-container .fa-brands {
   font-size: 3rem;
-
+}
+.python-icon i {
+  background: linear-gradient(to bottom, #3472a6 50%, #ffd343 50%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 3rem; /* Adjust the size if necessary */
 }
 
 /* project section */
 
-.project-container{
-  grid-template-columns: repeat(2,1fr);
+.project-container {
+  grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
   padding: 1rem 0;
 }
-.project-container>div{
+.project-container > div {
   box-shadow: var(--shadow);
   border-radius: 10px;
 }
 
-.top img{
+.top img {
   object-fit: contain;
   width: 100%;
   max-width: 1000px;
@@ -260,23 +278,157 @@ strong {
   max-height: 100%;
 }
 
-/* footer */
-footer {
-  background-color: var(--bg-dark);
-  width: 100%;
-  height: 400px;
-}
-.bottom .fa-brands{
+.bottom .fa-brands {
   display: flex;
   justify-content: center;
   margin: 1rem 0;
   font-size: 1.5rem;
 }
-.project-name{
+.project-name {
   padding-bottom: 2rem;
 }
 
-.project-name h3{
+.project-name h3 {
   letter-spacing: 2px;
-  padding: .5rem 0;
+  padding: 0.5rem 0;
 }
+
+/* about section */
+.about {
+  background-color: var(--about-bg-color);
+  padding: 1rem 0;
+}
+.about-container {
+  grid-template-columns: 1fr 3fr;
+}
+.right {
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 7rem;
+}
+.right h2 {
+  padding: 1rem 0;
+  margin: 0.5rem 0;
+  letter-spacing: 2px;
+  font-size: 2rem;
+}
+.right address {
+  font-weight: bold;
+  padding-bottom: 0.5rem;
+  font-size: 1.3rem;
+}
+.right h3 {
+  font-size: 1.3rem;
+  padding-bottom: 0.5rem;
+}
+.about .right p {
+  text-align: justify;
+  padding-bottom: 0.5rem;
+}
+.interest-item {
+  flex-wrap: wrap;
+}
+.interest-item span {
+  padding: 0.8rem 1.2rem;
+}
+.interest-item span:hover {
+  background-color: rgba(128, 128, 128, 0.433);
+  border-radius: 5px;
+  transform: scale(1.2);
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+/* contact me section */
+.contact {
+  padding: 1rem 0;
+}
+.contact-item {
+  gap: 5rem;
+}
+.contact-item div {
+  font-size: 3rem;
+}
+
+.fa-square-instagram {
+  background: linear-gradient(to right, #f58529, #dd2a7b, #8134af, #515bd4);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.contact-item div:hover {
+  cursor: pointer;
+  transition: 0.3s;
+  transform: scale(1.3);
+}
+.contact-item + span {
+  margin: 1rem 0;
+  font-family: bold;
+  font-size: 1.3rem;
+}
+.contact-email {
+  box-shadow: var(--shadow);
+  width: 300px;
+  height: 60px;
+  background-color: var(--bg-dark);
+  border-radius: 40px;
+  color: var(--white);
+  gap: 2rem;
+
+}
+.contact-email:hover {
+  cursor: pointer;
+  transition: 0.3s;
+  transform: scale(1.2);
+}
+.email-icon {
+  width: 40px;
+  height: 40px;
+  background-color: var(--ternary);
+  border-radius: 50%;
+}
+
+/* footer */
+footer {
+  background-color: var(--footer-bg-color);
+  min-height: 30vh;
+  margin-top: 5rem;
+  padding: 2rem 0;
+  color: var(--white);
+}
+
+.footer-sec {
+  align-items: center;
+  gap: 2rem;
+}
+.footer-sec h3{
+  margin: 1rem 0;
+}
+.footer-sec ul{
+  list-style-type: none;
+}
+.footer-sec ul li{
+  padding-top: .5rem;
+  line-height: 1rem;
+}
+footer p {
+  text-align: center;
+  margin: 1rem 0;
+  padding: .5rem 0;
+  font-size: 1.2rem;
+}
+.footer-sec ul li:hover{
+  transition: all .3s;
+  transform: scale(1.2);
+}
+
+
+/* go up */
+.goup{
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+}
+.fa-circle-arrow-up{
+  font-size: 3rem;
+}
+
